--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
 <p>Aan</p>
 
 
-<<<<<<< HEAD:index.html
 
-
-
-
-<hr>
-=======
 <h1>Bayu</h1>
->>>>>>> 22c90827abd4657ae3339c774ab2e04cac606eb4:indes.html
+<h2> Kurniadi <h2>
 </body>
 </html>
